core-api/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coreapi
  labels:
    apps: coreapi
  namespace: prod 
spec:
  replicas: 1
  selector:
    matchLabels:
      component: coreapi
  template:
    metadata:
      labels:
        component: coreapi
    spec:
      containers:
      - name: coreapi
        image: core-api:b3
        imagePullPolicy: Never
        resources: 
          requests:
            memory: "128Mi" #default 256Mi
        ports:
          - containerPort: 5000   
---
apiVersion: v1
kind: Service
metadata:
  name: coreapi
  labels:
    app: coreapi
    service: coreapi
  namespace: prod
spec:
  type: LoadBalancer
  selector:
    component: coreapi
  ports:
  - name: coreapi
    port: 3001
    targetPort: 5000
