core-api/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gr4vy-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # introduced URL rewrite to target multiple backend service and helps in routing to the service 
spec:
  rules:
    - host: gr4vy.info
      http:
        paths:
          - path: /authapi(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: authapi
                port:
                  number: 3000
          - path: /coreapi(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: coreapi
                port:
                  number: 3001
